syntax = "proto3";

package greet;

option go_package="greet/greetpb";

message Greeting {
    string first_name = 1;
    string second_name = 2;
}

message GreetingRequest {
    Greeting greeting = 1;
}

message GreetingResponse {
    string result = 1;
}

message GreetingManyRequest {
    Greeting greeting = 1;
}

message GreetingManyResponse {
    string result = 1;
}

message LongGreetRequest {
    Greeting greeting = 1;
}

message LongGreetResponse {
    string result = 1;
}

message GreetEveryoneRequest {
    Greeting greeting = 1;
}

message GreetEveryoneResponse {
    string result = 1;
}


message GreetWithDeadLineRequest {
    Greeting greeting = 1;
}

message GreetWithDeadLineResponse {
    string result = 1;
}


service GreetService{
    //unary
    rpc Greet(GreetingRequest) returns (GreetingResponse){};

    // server streaming
    rpc GreetManyTime(GreetingManyRequest) returns(stream GreetingManyResponse){};

    // client streaming
    rpc LongGreet(stream LongGreetRequest) returns (stream LongGreetResponse) {};

    // BiDi Streaming
    rpc GreetEveryone(stream GreetEveryoneRequest) returns (stream GreetEveryoneResponse) {};

    // Unary with deadline
    rpc GreetWithDeadLine(GreetWithDeadLineRequest) returns (GreetWithDeadLineResponse) {};

}